fix: make the border-bottom of the input-container be red as well to not overlap with the ::after

--- a/src/Components/Form/Fields/Input.scss
+++ b/src/Components/Form/Fields/Input.scss
@@ -17,6 +17,8 @@
     }
 
     .input-container {
+      border-bottom: 3px solid $error;
+
       label {
         color: $error;
       }
